Figuring out Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,5 @@ dependencies {
 }
 
 // Define the main class for the application
-mainClassName = 'App'
+mainClassName = 'csci305.javalab.RPSLS'
 
