Code is finished, no comments yet

--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,6 @@ dependencies {
 // Define the main class for the application
 mainClassName = 'csci305.javalab.RPSLS'
 
+run{
+ standardInput = System.in
+}
